@@ -269,8 +269,9 @@ Just as you can use PHP functions as modifiers directly, you can now access
 PHP functions directly, provided they are permitted by security settings:
 {time()}
 
-There is a new {function}...{/function} block tag.  This enables reuse of code
-sequences like a plugin function. It can call itself recursively.
+There is a new {function}...{/function} block tag to implement a template function.
+This enables reuse of code sequences like a plugin function. It can call itself recursively.
+Template function must be called with the new {call name=foo...} tag.
 
 Example:
 
@@ -280,7 +281,7 @@ Template file:
   {foreach $data as $entry}
     {if is_array($entry)}
       <li>{$entry@key}</li>
-       {menu data=$entry level=$level+1}
+       {call name=menu data=$entry level=$level+1}
     {else}
       <li>{$entry}</li>
     {/if}
@@ -291,7 +292,7 @@ Template file:
 {$menu = ['item1','item2','item3' => ['item3-1','item3-2','item3-3' =>
   ['item3-3-1','item3-3-2']],'item4']}
 
-{menu data=$menu}
+{call name=menu data=$menu}
 
 
 Generated output:
